--- a/week-1/day-1/index.html
+++ b/week-1/day-1/index.html
@@ -5,27 +5,29 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Inline and Block Elements</title>
 </head>
 <body>
-    <h1>My Favorite Things</h1>
-    <img width="100px" src="./me.png">
-    <h2>My Top Movies</h2>
-    <ol>
-        <li>Armageddon</li>
-        <li>Man on Fire</li>
-        <li>Gladiator</li>
-        <li>Rocky III</li>
-        <li>Wonder Woman</li>
-    </ol>
-    <h2>My Favorite Places to Visit</h2>
+    <h2>Block Elements List</h2>
     <ul>
-        <li>Bookstore</li>
-        <li>Panera Bread</li>
-        <li>Hawaii</li>
-        <li>Korea</li>
-        <li>Vernon Hill</li>
+        <li>div</li>
+        <li>ul</li>
+        <li>ol</li>
+        <li>li</li>
+        <li>h1 - h6</li>
+        <li>p</li>
+        <li>form</li>
     </ul>
-    <a href="https://www.linkedin.com/in/nicePerson/">LinkedIn</a>
+
+    <h2>Inline Elements List</h2>
+    <ul>
+        <li>span</li>
+        <li>img</li>
+        <li>input</li>
+        <li>label</li>
+        <li>a</li>
+        <li>button</li>
+    </ul>
+
 </body>
 </html>
