--- a/week-1/day-1/index.html
+++ b/week-1/day-1/index.html
@@ -1,33 +1,35 @@
 <!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Inline and Block Elements</title>
-</head>
-<body>
-    <h2>Block Elements List</h2>
-    <ul>
-        <li>div</li>
-        <li>ul</li>
-        <li>ol</li>
-        <li>li</li>
-        <li>h1 - h6</li>
-        <li>p</li>
-        <li>form</li>
-    </ul>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport"
+            content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>Inline and Block Elements</title>
+    </head>
+    <body>
+        
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, accusamus atque fuga quod voluptates vel necessitatibus eum sint id quis velit esse ipsam iure adipisci, libero harum mollitia ipsa aut.
 
-    <h2>Inline Elements List</h2>
-    <ul>
-        <li>span</li>
-        <li>img</li>
-        <li>input</li>
-        <li>label</li>
-        <li>a</li>
-        <li>button</li>
-    </ul>
+        <h2>Block Elements List</h2>
+        <ul>
+            <li>div</li>
+            <li>ul</li>
+            <li>ol</li>
+            <li>li</li>
+            <li>h1 - h6</li>
+            <li>p</li>
+            <li>form</li>
+        </ul>
 
-</body>
+        <h2>Inline Elements List</h2>
+        <ul>
+            <li>span</li>
+            <li>img</li>
+            <li>input</li>
+            <li>label</li>
+            <li>a</li>
+            <li>button</li>
+        </ul>
+    </body>
 </html>
