--- a/week-1/day-2/exitTicket_day2.html
+++ b/week-1/day-2/exitTicket_day2.html
@@ -3,19 +3,19 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>W1D2 Exit Ticket</title>
     </head>
     <body>
         <h1>Music Player</h1>
         <table>
-            <thead align="center">
+            <thead>
                 <tr>
-                    <td><h3>Artist</h3></td>
-                    <td><h3>Song</h3></td>
-                    <td><h3>Track</h3></td>
+                    <th>Artist</th>
+                    <th>Song</th>
+                    <th>Track</th>
                 </tr>
             </thead>
-            <tbody align="center">
+            <tbody>
                 <tr>
                     <td>Artist One</td>
                     <td>Song One</td>
