--- a/week-1/day-3/index.html
+++ b/week-1/day-3/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="./style.css" />
+    <title>W1D3</title>
   </head>
   <body>
     <h1>What is CSS?</h1>
