W2D2 - Animated Image Carousel

--- a/week-2/day-2/index.html
+++ b/week-2/day-2/index.html
@@ -1,1 +1,23 @@
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="style.css">
+        <title>GMC | W2D1 | Image Carousel</title>
+    </head>
 
+    <body>
+        <div id="window">
+            <div id="imageSlider">
+                <img width="200" height="200" src="./i/sealAirForce.png" alt="Air Force" />
+                <img width="200" height="200" src="./i/sealArmy.png" alt="Army" />
+                <img width="200" height="200" src="./i/sealCoastGuard.png" alt="Coast Guard" />
+                <img width="200" height="200" src="./i/sealMarines.png" alt="Marines" />
+                <img width="200" height="200" src="./i/sealNavy.png" alt="Navy" />
+                <img width="200" height="200" src="./i/sealSpaceForce.png" alt="Space Force" />
+                <img width="200" height="200" src="./i/sealAirForce.png" alt="Air Force" />
+            </div>
+        </div>
+    </body>
+</html>
